--- a/Day3/Neural_Nets.ipynb
+++ b/Day3/Neural_Nets.ipynb
@@ -6,7 +6,7 @@
       "provenance": [],
       "machine_shape": "hm",
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyOYhILCaL/3cRciZlyowbhU",
+      "authorship_tag": "ABX9TyMnHPOMIgxdVyKmsTQ2BDbt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -880,6 +880,36 @@
       ],
       "metadata": {
         "id": "f3L_HLtBl_H0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Now you do it\n",
+        "<img src=\"https://www.dropbox.com/scl/fi/s9kv1dytq4qzr8g19y3r0/hands_on.jpg?rlkey=yz8kq22sfdgc7lsgmm1e0fksr&raw=1\" width=\"100\" height=\"100\" align=\"right\"/>\n",
+        "\n",
+        "\n",
+        "Use the following datasets:\n",
+        "\n",
+        "\n",
+        "**Train set:** https://www.dropbox.com/scl/fi/9n194dy9zbx4k2nh3ii1b/train.csv?rlkey=31n28nptwa0chqq6pzuo2ke1e&dl=0\n",
+        "\n",
+        "\n",
+        "**Test Set:** https://www.dropbox.com/scl/fi/muh6upm226ay4l08psum4/test.csv?rlkey=7xzw4gtns7m3gpy17f4wf3eba&dl=0\n",
+        "\n",
+        "And perform Sentiment analysis on tweets!"
+      ],
+      "metadata": {
+        "id": "ozZtHQHe6ePg"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "9i--6VPQ7O8h"
       },
       "execution_count": null,
       "outputs": []
