--- a/Day1/Data_Manipulation.ipynb
+++ b/Day1/Data_Manipulation.ipynb
@@ -1498,8 +1498,7 @@
       },
       "outputs": [],
       "source": [
-        "# Check the shape of the DataFrame.\n",
-        "ufo.shape"
+        "# Check the shape of the DataFrame.\n"
       ]
     },
     {
@@ -1510,8 +1509,7 @@
       },
       "outputs": [],
       "source": [
-        "# What are the three most common colors reported?\n",
-        "ufo['Colors Reported'].value_counts().head(3).index"
+        "# What are the three most common colors reported?\n"
       ]
     },
     {
@@ -1522,8 +1520,7 @@
       },
       "outputs": [],
       "source": [
-        "# Rename any columns with spaces so that they don't contain spaces.\n",
-        "ufo.rename(columns = {'Colors Reported': 'colors', 'Shape Reported': 'shape'}, inplace=True)"
+        "# Rename any columns with spaces so that they don't contain spaces.\n"
       ]
     },
     {
@@ -1534,8 +1531,7 @@
       },
       "outputs": [],
       "source": [
-        "# For reports in VA, what's the most common city?\n",
-        "ufo[ufo.State == 'VA'].City.value_counts().head(1)"
+        "# For reports in VA, what's the most common city?\n"
       ]
     },
     {
@@ -1546,8 +1542,7 @@
       },
       "outputs": [],
       "source": [
-        "# Print a DataFrame containing only reports from Arlington, VA.\n",
-        "ufo[ ( ufo.State == 'VA' ) & ( ufo.City == 'Arlington' ) ]"
+        "# Print a DataFrame containing only reports from Arlington, VA.\n"
       ]
     },
     {
@@ -1558,8 +1553,7 @@
       },
       "outputs": [],
       "source": [
-        "# Count the number of missing values in each column.\n",
-        "ufo.isnull().sum()"
+        "# Count the number of missing values in each column.\n"
       ]
     },
     {
@@ -1570,8 +1564,7 @@
       },
       "outputs": [],
       "source": [
-        "# How many rows remain if you drop all rows with any missing values?\n",
-        "ufo.dropna().shape"
+        "# How many rows remain if you drop all rows with any missing values?\n"
       ]
     },
     {
