--- a/Optional/Data_Visualization_and_Pipeline.ipynb
+++ b/Optional/Data_Visualization_and_Pipeline.ipynb
@@ -160,7 +160,7 @@
         "\n",
         "The choice of visualization should depend what you are trying to show. Here is a helpful flowchart that you can use to determine the best type of visualizations.\n",
         "\n",
-        "![Chart Suggestions](images/chart_suggestions.jpg)\n"
+        "![Chart Suggestions](https://www.dropbox.com/scl/fi/cozurwr8iiv3kbssqoixk/chart_suggestions.jpg?rlkey=nkm4l7a0zv8vy7mnskpmjos2s&raw=1)\n"
       ]
     },
     {
